k8s/base/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-server
  template:
    metadata:
      labels:
        app: book-server
    spec:
      containers:
        - name: book-server
          image: ghcr.io/sungw0o/highfivebooks-v2/book-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: book-server
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: book-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: member-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: member-server
  template:
    metadata:
      labels:
        app: member-server
    spec:
      containers:
        - name: member-server
          image: ghcr.io/sungw0o/highfivebooks-v2/member-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: member-server
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: member-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coupon-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coupon-server
  template:
    metadata:
      labels:
        app: coupon-server
    spec:
      containers:
        - name: coupon-server
          image: ghcr.io/sungw0o/highfivebooks-v2/coupon-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: coupon-server
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: coupon-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-server
  template:
    metadata:
      labels:
        app: payment-server
    spec:
      containers:
        - name: payment-server
          image: ghcr.io/sungw0o/highfivebooks-v2/payment-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: payment-server
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: payment-server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-server
  template:
    metadata:
      labels:
        app: order-server
    spec:
      containers:
        - name: order-server
          image: ghcr.io/sungw0o/highfivebooks-v2/order-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: order-server
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: order-server
