k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: highfivebooks-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: nginx
  rules:
    - host: highfivebooks.local
      http:
        paths:
          - path: /api/books
            pathType: Prefix
            backend:
              service:
                name: book-server
                port:
                  name: http
          - path: /api/orders
            pathType: Prefix
            backend:
              service:
                name: order-server
                port:
                  name: http
          - path: /api/payments
            pathType: Prefix
            backend:
              service:
                name: payment-server
                port:
                  name: http
          - path: /api/coupons
            pathType: Prefix
            backend:
              service:
                name: coupon-server
                port:
                  name: http
          - path: /api/members
            pathType: Prefix
            backend:
              service:
                name: member-server
                port:
                  name: http
          - path: /api/cart
            pathType: Prefix
            backend:
              service:
                name: member-server
                port:
                  name: http
          - path: /internal/point-transactions
            pathType: Prefix
            backend:
              service:
                name: member-server
                port:
                  name: http
